[20250612] 문창오대리님 수정 요청사항 1,2번
1. 해당 부분 마침표를 문장 끝으로 이동 부탁드려요.

2. 본인확인 단계에서 통신사 선택한 이후에
전화번호 입력하기 위해 숫자 자판이 자동으로 나오는데요.
잠깐 나왔다가 바로 자판이 내려가는 현상이 자주 보입니다. (안드로이드폰 입니다.)

처음 입력시에 위와 같은 증상이 자주 보이고
통신사를 다시 선택하기 위해 재선택시에는
숫자 자판이 자동으로 띄워진 상태로
잘 있습니다.
이것도 확인 부탁드려요.
(상황마다 다른것 같아요)

--- a/root/html/1001_100_4_1_n.html
+++ b/root/html/1001_100_4_1_n.html
@@ -20,4 +20,4 @@
 신용도판단정보(0개)<br/>
 신용능력정보(1개) - 투자성향<br/>
 공공정보(0개)<br/>
-<font color='e33433'>위 개인신용정보 <b>수집/이용</b>에 동의합니다.</font><br/><br/>
+<font color='e33433'>위 개인신용정보 <b>수집/이용</b>에 동의합니다.</font><br/>
